--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -311,7 +311,7 @@ main {
     border-radius: var(--r10);
     box-shadow: 0px -4px 0px var(--silver-shadow) inset;
     cursor: pointer;
-    justify-self:last baseline;
+    justify-self: end;
     height: var(--r52);
     width: var(--r52);
 }
@@ -446,7 +446,7 @@ main {
     height: var(--r266);
     width: 100%;
     -webkit-animation: bounce-in-left 1.2s both;
-    animation: bounce-in-left 1.2s both;
+            animation: bounce-in-left 1.2s both;
 }
 
 #results-container,
@@ -525,7 +525,7 @@ main {
     top: 1.5rem;
     right: 1.5rem;
     width: 4rem;
-    aspect-ratio: 1;
+    height: 4rem;
     transition: all .3s ease;
 }
 
